--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Boutique - Premium Fashion Store</title>
-    <meta name="description" content="Discover premium fashion at Boutique. Shop latest trends in ethnic wear, casual & formal clothing for men, women & kids." />
-    <meta name="author" content="Boutique Fashion" />
+    <title>FreshWear - Premium Fashion Store</title>
+    <meta name="description" content="Discover premium fashion at FreshWear. Shop latest trends in ethnic wear, casual & formal clothing for men, women & kids." />
+    <meta name="author" content="FreshWear Fashion" />
 
-    <meta property="og:title" content="Boutique - Premium Fashion Store" />
+    <meta property="og:title" content="FreshWear - Premium Fashion Store" />
     <meta property="og:description" content="Discover premium fashion collections with the latest trends for men, women & kids." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://blank.page/" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@boutique_fashion" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@freshwear_fashion" />
+    <meta name="twitter:image" content="https://blank.page/" />
   </head>
 
   <body>
